Fix spacing between control buttons

--- a/src/containers/TimeControls/TimeControls.less
+++ b/src/containers/TimeControls/TimeControls.less
@@ -31,7 +31,7 @@
 .time-controls__buttons {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .time-controls__year {
